Make the list of claimed mineral sites mutable
2025-07-08

- fix : avoid Immutable List problem by temporarily revert
        back to .collect(Collectors.toList()) on
        Exploration.findClaimedCandidateSites()

Related to https://github.com/mars-sim/mars-sim/issues/1599